--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,6 @@
   <h1>vijay</h1>
 </center>
 <hr>
+<p>
+  Joseph Vijay Chandrasekhar (born 22 June 1974) is an Indian actor and singer who works predominantly in Tamil cinema. Vijay has acted in over 65 films...
+</p>
