--- a/vijay.html
+++ b/vijay.html
@@ -5,3 +5,5 @@
 <p>
   Joseph Vijay Chandrasekhar (born 22 June 1974) is an Indian actor and singer who works predominantly in Tamil cinema. Vijay has acted in over 65 films...
 </p>
+
+<p>contact : 9876543210</p>
